tests/semantic_analysis/error/wrong_redefined.c
wrong_redefined\.c:3:7: error:.*